[package]
name = "noise_search"
version = "0.8.0"
authors = ["Damien Katz <me@damienkatz.com>", "Volker Mische <volker.mische@gmail.com>"]
repository = "https://github.com/pipedown/noise.git"
homepage = "https://noisesearch.org/"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Nested Object Inverted Search Engine"
build = "build.rs"
edition = "2021"

[lib]
name = "noise_search"
crate-type = ["lib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stemmer = "0.3.2"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
noise_search_deps_rocksdb = "0.1.1"
varint = "0.9.0"
uuid = { version = "1.18.1", features = ["v4"] }
