[package]
name = "noise_search_capi"
version = "0.1.0"
authors = ["Damien Katz <me@damienkatz.com>", "Volker Mische <volker.mische@gmail.com>"]
repository = "https://github.com/pipedown/noise.git"
homepage = "https:/noisesearch.org"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "C API for Nested Object Inverted Search Engine"

[lib]
name = "noise_search_capi"
crate-type = ["cdylib"]


[dependencies]
noise_search = { path = "../" }
libc = "0.2.39"
