[package]
name = "noise-storage-rocksdb"
version = "0.1.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "RocksDB storage backend for Noise search engine"
edition = "2021"

[dependencies]
noise-storage = { path = "../noise-storage" }
noise_search_deps_rocksdb = "0.1.2"
self_cell = "1.0"
